--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html style = "background-color : darkgrey">
 <div>
   <head>
     <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -30,37 +30,41 @@
 </div>
  <ul id = "sportslist" style = "display: none">
  	<li>
-		<a href="gozags.com">Gonzaga Basketball</a>
+		<a href="http://gozags.com">
+			<img src="gu.jpg"  >
+		</a>
  	</li>
  	<li>
-		<a href="spokanechiefs.com">Spokane Chiefs</a>
+		<a href="http://spokanechiefs.com">
+			<img src="chiefs.png"  >
+		</a>
  	</li>
  	<li>
-		<a href="http://www.milb.com/index.jsp?sid=t486">Spokane Indians</a>
+		<a href="http://www.milb.com/index.jsp?sid=t486">
+			<img src="indians.jpg"  ></a>
  	</li>
 </ul> 
  <ul id = "foodlist" style = "display: none">
  	<li>
-		<a href="theonion.biz">The Onion</a>
+		<a href="http:theonion.biz">
+			<img src="onion.png" style = "background-color: black"></a>
  	</li>
  	<li>
-		<a href="deleonfoods.net">De Leon Foods</a>
+		<a href="http://deleonfoods.net"><img src="deleon.png" style = "background-color: black"></a>
  	</li>
  	<li>
-		<a href="http://www.theflyinggoat.com/">The Flying Goat</a>
+		<a href="http://www.theflyinggoat.com/"><img src="goat.png"</a>
  	</li>
 </ul>
-
-
 <ul id = "outdoorlist" style = "display: none">
  	<li>
-		<a href="schweitzer.com">Schweitzer Mountain Resort</a>
+		<a href="http://schweitzer.com"><img src="bowl.png" style = "background-color: black"></a>
  	</li>
  	<li>
-		<a href="https://www.wta.org/go-hiking/hikes/riverside-state-park">Bowl and Pitcher</a>
+		<a href="https://www.wta.org/go-hiking/hikes/riverside-state-park"><img src="schweitzer.jpg" style = "background-color: black"></a>
  	</li>
  	<li>
-		<a href="http://coeurdalene.org/">Coeur D' Alene</a>
+		<a href="http://coeurdalene.org/"><img src="coeur.jpg" style = "background-color: black"></a>
  	</li>
 </ul>
 </body>
