--- a/form.html
+++ b/form.html
@@ -13,13 +13,10 @@
     <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
     <meta charset="utf-8">
     <title>About Me</title>
-    <link rel="sytlesheet" type="text/css" href="reset.css">
+    <link rel="stylesheet" type="text/css" href="reset.css">
     <link rel="stylesheet" type="text/css" href="styles.css">
     <script src="form.js"></script>
-    <script>
 
-</script>
-    </style>
   </head>
   
   <body>
@@ -38,16 +35,16 @@
 
 <form >
   First name:<br>
-  <input type="text" id = "firstname" name="firstname" placeholder="Enter First Name" >
+  <input  id = "firstname" name="firstname" placeholder="Enter First Name" >
   <br>
   
   Last name:<br>
-  <input type="text" id = "lastname" name="lastname" placeholder="Enter Lase Name" >
+  <input id = "lastname" name="lastname" placeholder="Enter Lase Name" >
   <br>
 
    <br>
   
-  Nunber:<br>
+  Number:<br>
   <input type="number" id = "number" name="number" placeholder="Enter Phone Number"  >
   <br>
    EMAIL:<br>
