--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
     <meta charset="utf-8">
     <title>Spocompton</title>
-    <link rel="sytlesheet" type="text/css" href="reset.css">
+    <link rel="stylesheet" type="text/css" href="reset.css">
     <link rel="stylesheet" type="text/css" href="styles.css">
     <script src="food.js"></script>
     <script>
@@ -24,10 +24,11 @@
 </h3>
 </div>
 <div style= "text-align:center">
-<input  type="text" id = "Sports" value="Sports" onClick = "sports()" >
-<input type="text" id = "Outdoors" value="Outdoors" onClick = "outdoors()" >
-<input type="text" id = "Food" value="Food" onClick = "food()" >
+<input  type="submit" id = "Sports" value="Sports" onClick = "sports()" >
+<input type="submit" id = "Outdoors" value="Outdoors" onClick = "outdoors()" >
+<input type="submit" id = "Food" value="Food" onClick = "food()" >
 </div>
+ 
  <ul id = "sportslist" style = "display: none">
  	<li>
 		<a href="http://gozags.com">
@@ -44,6 +45,9 @@
 			<img src="indians.jpg"  ></a>
  	</li>
 </ul> 
+ 
+
+
  <ul id = "foodlist" style = "display: none">
  	<li>
 		<a href="http:theonion.biz">
@@ -56,6 +60,9 @@
 		<a href="http://www.theflyinggoat.com/"><img src="goat.png"</a>
  	</li>
 </ul>
+
+
+
 <ul id = "outdoorlist" style = "display: none">
  	<li>
 		<a href="http://schweitzer.com"><img src="bowl.png" style = "background-color: black"></a>
@@ -67,5 +74,6 @@
 		<a href="http://coeurdalene.org/"><img src="coeur.jpg" style = "background-color: black"></a>
  	</li>
 </ul>
+
 </body>
 </html>
