--- a/map.html
+++ b/map.html
@@ -17,8 +17,27 @@
     </style>
   </head>
 
+  <div class="flex-container3">
+  
+  <a style= "background-color: #000000;" href="index.html"> home </a>
+  <a style= "background-color: #000000;" href="map.html"> map </a>
+  <a style= "background-color: #000000;" href="form.html"> form </a>
+  <a style= "background-color: #000000;" href="api.html"> api </a>
+
+
+  <div style="background-color:#000000; align-content:center;"">
+
+
+  </div>
+  
+  </div>
+
+
+
+
+
   <body>
-    <h1 style = "color:black">My Google Maps Demo</h1>
+
     <div id="map"></div>
     <script>
       function initMap() {
