--- a/form.html
+++ b/form.html
@@ -20,6 +20,21 @@
   </head>
   
   <body>
+  <div class="flex-container3">
+  
+  <a style= "background-color: #000000;" href="index.html"> home </a>
+  <a style= "background-color: #000000;" href="map.html"> map </a>
+  <a style= "background-color: #000000;" href="form.html"> form </a>
+  <a style= "background-color: #000000;" href="api.html"> api </a>
+
+
+  <div style="background-color:#000000; align-content:center;"">
+
+
+  </div>
+  
+  </div>
+
 
 
 <div style ="background-color : red;">
@@ -30,6 +45,10 @@
 
 
 </div>
+
+
+
+
 
 <div>
 
