--- a/index.html
+++ b/index.html
@@ -15,21 +15,39 @@
   </head>
 <body>
 <div style ="background-color : green;">
+  <div class="flex-container3">
+  
+  <a style= "background-color: #000000;" href="index.html"> home </a>
+  <a style= "background-color: #000000;" href="map.html"> map </a>
+  <a style= "background-color: #000000;" href="form.html"> form </a>
+  <a style= "background-color: #000000;" href="api.html"> api </a>
+
+  <div style="background-color:#000000; align-content:center;"">
+
+
+  </div>
+  
+  </div>
+
+<br>
+
 <h1>
   Things to do in Spokane
 </h1>
+<br>
 </div>
+<br>
 <h3>
 	What type of activity do you like?
 </h3>
+<br>
 </div>
 <div style= "text-align:center">
 <input  type="submit" id = "Sports" value="Sports" onClick = "sports()" >
 <input type="submit" id = "Outdoors" value="Outdoors" onClick = "outdoors()" >
 <input type="submit" id = "Food" value="Food" onClick = "food()" >
 </div>
- <br>
- <br>
+
  <ul id = "sportslist" style = "display: none">
  	<li>
 		<a href="http://gozags.com">
@@ -55,10 +73,12 @@
 			<img src="onion.png" style = "background-color: black"></a>
  	</li>
  	<li>
-		<a href="http://deleonfoods.net"><img src="deleon.png" style = "background-color: black"></a>
+		<a href="http://deleonfoods.net">
+			<img src="deleon.png" style = "background-color: black"></a>
  	</li>
  	<li>
-		<a href="http://www.theflyinggoat.com/"><img src="goat.png"</a>
+		<a href="http://www.theflyinggoat.com/">
+			<img src="goat.png"></a>
  	</li>
 </ul>
 
