--- a/map.html
+++ b/map.html
@@ -35,6 +35,13 @@
 
 
 
+<h1 style = "color: black; background-color: gold;">
+    <br>
+  Heres a map of some restaraunts
+  <br>
+  <br>
+</h1>
+
 
   <body>
 
