--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html style = "background-color : darkgrey">
+<html style = "background-color : black">
 <div>
   <head>
     <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -28,16 +28,19 @@
   </div>
   
   </div>
-
-<br>
+</div>
+<div style = "background: green">
+<br >
 
 <h1>
   Things to do in Spokane
 </h1>
 <br>
 </div>
+
+</div>
 <br>
-<h3>
+<h3 style = "color: white">
 	What type of activity do you like?
 </h3>
 <br>
@@ -48,53 +51,58 @@
 <input type="submit" id = "Food" value="Food" onClick = "food()" >
 </div>
 
- <ul id = "sportslist" style = "display: none">
+<div>
+ <ul id = "sportslist" style = "display: none; ">
  	<li>
-		<a href="http://gozags.com">
+		<a href="http://gozags.com" style = "width : auto; text-align: center;">
 			<img src="gu.jpg"  >
 		</a>
  	</li>
  	<li>
-		<a href="http://spokanechiefs.com">
+		<a href="http://spokanechiefs.com" style = " width : auto; text-align: center;">
 			<img src="chiefs.png"  >
 		</a>
  	</li>
  	<li>
-		<a href="http://www.milb.com/index.jsp?sid=t486">
+		<a href="http://www.milb.com/index.jsp?sid=t486" style = "width :auto; text-align: center;">
 			<img src="indians.jpg"  ></a>
  	</li>
 </ul> 
  
 
 
- <ul id = "foodlist" style = "display: none">
+ <ul id = "foodlist" style = "display: none;">
  	<li>
-		<a href="http:theonion.biz">
-			<img src="onion.png" style = "background-color: black"></a>
+		<a href="http:theonion.biz" style = " width : auto; text-align: center;">
+			<img src="onion.png" ></a>
  	</li>
  	<li>
-		<a href="http://deleonfoods.net">
-			<img src="deleon.png" style = "background-color: black"></a>
+		<a href="http://deleonfoods.net" style = " width : auto; text-align: center;">
+			<img src="deleon.png" ></a>
  	</li>
  	<li>
-		<a href="http://www.theflyinggoat.com/">
+		<a href="http://www.theflyinggoat.com/" style =  "width : auto; text-align: center;">
 			<img src="goat.png"></a>
  	</li>
 </ul>
 
 
 
-<ul id = "outdoorlist" style = "display: none">
+<ul id = "outdoorlist" style = "display: none;">
  	<li>
-		<a href="http://schweitzer.com"><img src="bowl.png" style = "background-color: black"></a>
+		<a class = "n" href="http://schweitzer.com" style = " width : auto; text-align: center;">
+			<img src="bowl.png" ></a>
+ 	</li>
+ 	<li> 
+		<a class = "n" href="https://www.wta.org/go-hiking/hikes/riverside-state-park" style=" width : auto; text-align: center;">
+			<img src="schweitzer.jpg" ></a>
  	</li>
  	<li>
-		<a href="https://www.wta.org/go-hiking/hikes/riverside-state-park"><img src="schweitzer.jpg" style = "background-color: black"></a>
- 	</li>
- 	<li>
-		<a href="http://coeurdalene.org/"><img src="coeur.jpg" style = "background-color: black"></a>
+		<a class = "n" href="http://coeurdalene.org/" style = " width : auto; text-align: center;">
+			<img src="coeur.jpg" ></a>
  	</li>
 </ul>
+</div>
 
 </body>
 </html>
