--- a/map.html
+++ b/map.html
@@ -140,23 +140,23 @@
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAIKamQxnIGE7OkZv6sZAuIan4B-KmveFk&callback=initMap">
     </script>
 
-     <br>
- <br>
-
+     
+<div style = "background:black">
     <ul id = "foodlist" >
-    <li>
-        <a href="http:theonion.biz">
-            <img src="onion.png" style = "background-color: black"> </a>
-            <h1 style = "color : black;"> The Onion is my favorite Burger/Beer Place</h1>
+    <li style = "background:black">
+        <a href="http:theonion.biz" style = " width : auto; text-align: center;">
+            <img src="onion.png" > </a>
+            <h1 style = "color : white;"> The Onion is my favorite Burger/Beer Place</h1>
     </li>
     <li>
-        <a href="http://deleonfoods.net"><img src="deleon.png" style = "background-color: black"></a>
-        <h1 style = "color : black;"> De Leon is the closest Spokane gets to Southern California mexican food </h1>
+        <a href="http://deleonfoods.net" style = " width : auto; text-align: center;"><img src="deleon.png" style = " width : auto; text-align: center;"></a>
+        <h1 style = "color : white;"> De Leon is the closest Spokane gets to Southern California mexican food </h1>
     </li>
     <li>
-        <a href="http://www.theflyinggoat.com/"><img src="goat.png">
-        <h1 style = "color : black;"> Great Pizza, bit of a drive from campus however </h1>
+        <a href="http://www.theflyinggoat.com/" style = " width : auto; text-align: center;"><img src="goat.png" >
+        <h1 style = "color : white;"> Great Pizza, bit of a drive from campus however </h1>
     </li>
     </ul>
+</div>
   </body>
 </html>
