--- a/index.html
+++ b/index.html
@@ -105,4 +105,20 @@
 </div>
 
 </body>
+  <footer>
+ <div class="flex-container3">
+  
+  <a style= "background-color: #000000;" href="index.html"> home </a>
+  <a style= "background-color: #000000;" href="map.html"> map </a>
+  <a style= "background-color: #000000;" href="form.html"> form </a>
+  <a style= "background-color: #000000;" href="api.html"> api </a>
+
+
+  <div style="background-color:#000000; align-content:center;"">
+
+
+  </div>
+  
+  </div>
+</footer>
 </html>
