--- a/form.html
+++ b/form.html
@@ -56,20 +56,20 @@
 
 <form >
   First name:<br>
-  <input  id = "firstname" name="firstname" placeholder="Enter First Name" >
+  <input class="inputx" id = "firstname" name="firstname" placeholder="Enter First Name" >
   <br>
   
   Last name:<br>
-  <input id = "lastname" name="lastname" placeholder="Enter Lase Name" >
+  <input  class="inputx" id = "lastname" name="lastname" placeholder="Enter Last Name" >
   <br>
 
    <br>
   
   Number:<br>
-  <input type="number" id = "number" name="number" placeholder="Enter Phone Number"  >
+  <input class="inputx" type="number" id = "number" name="number" placeholder="Enter Phone Number"  >
   <br>
    EMAIL:<br>
-  <input type="email" id = "email" name="email" placeholder="Enter Email" >
+  <input  class="inputx" type="email" id = "email" name="email" placeholder="Enter Email" >
   <br>
   
 
