--- a/map.html
+++ b/map.html
@@ -56,7 +56,7 @@
         var theOnionLabel = '<div id="content">'+
             '<div id="siteNotice">'+
             '</div>'+
-            '<h1 id="firstHeading" class="firstHeading">The Onion</h1>'+
+            '<h1 id="firstHeading" style="color:black" class="firstHeading">The Onion</h1>'+
             '<div id="bodyContent">'+
 
             '<p>The Onion is an excelent tap house with great food ' +
@@ -73,7 +73,7 @@
          var deLeonLabel = '<div id="content">'+
             '<div id="siteNotice">'+
             '</div>'+
-            '<h1 id="firstHeading" class="firstHeading">De Leon Foods</h1>'+
+            '<h1 id="firstHeading" style="color:black" class="firstHeading">De Leon Foods</h1>'+
             '<div id="bodyContent">'+
             
             '<p>Great mexican food with homemade tortillas ' +
@@ -89,7 +89,7 @@
         var flyingGoatLabel = '<div id="content">'+
             '<div id="siteNotice">'+
             '</div>'+
-            '<h1 id="firstHeading" class="firstHeading">The Flying Goat</h1>'+
+            '<h1 id="firstHeading" class="firstHeading" style="color:black">The Flying Goat</h1>'+
             '<div id="bodyContent">'+
             
             '<p>Pizza that is good' +
@@ -161,7 +161,7 @@
   </body>
 
   <footer>
-      <div class="flex-container3">
+ <div class="flex-container3">
   
   <a style= "background-color: #000000;" href="index.html"> home </a>
   <a style= "background-color: #000000;" href="map.html"> map </a>
