--- a/index.html
+++ b/index.html
@@ -108,12 +108,10 @@
   <footer>
   	<br>
   	<br>
- <div class="flex-container3">
+ <div class="flex-container3" style= "text-align:right">
   
-  <a style= "background-color: #000000;" href="index.html"> home </a>
-  <a style= "background-color: #000000;" href="map.html"> map </a>
-  <a style= "background-color: #000000;" href="form.html"> form </a>
-  <a style= "background-color: #000000;" href="api.html"> api </a>
+
+  <h3 style = "color:white; text-align:right;"> (c) Daniel Richard </h3>
 
 
   <div style="background-color:#000000; align-content:center;"">
