--- a/api.html
+++ b/api.html
@@ -15,7 +15,8 @@
     <title>api</title>
     <link rel="stylesheet" type="text/css" href="reset.css">
     <link rel="stylesheet" type="text/css" href="styles.css">
-    <script src="form.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="api.js"></script>
 
   </head>
   
@@ -48,14 +49,43 @@
 
 </div>
 
+<br>
+<h2 style = "font-size :x-large" id = "foodname"></h2>
+<br>
+<h4 id = "foodcategory"></h4>
+<br>
+<img style = "width:250px;
+  height:auto; display: block;" src = "" id = image>
+<br>
+<br>
+<p style = "padding:20px" id = "instructions"></p>
+
+
+
+
+
+
+
+<div style= "text-align:center">
+  <br>
+<input  type="submit" id = "food" value="New Recipe" onClick = "button()" >
+
+</div>
+
+
 </body>
-  <footer>
- <div class="flex-container3">
+
+
+
+
+
+   <footer>
+    <br>
+    <br>
+ <div class="flex-container3" style= "text-align:right">
   
-  <a style= "background-color: #000000;" href="index.html"> home </a>
-  <a style= "background-color: #000000;" href="map.html"> map </a>
-  <a style= "background-color: #000000;" href="form.html"> form </a>
-  <a style= "background-color: #000000;" href="api.html"> api </a>
+
+  <h3 style = "color:white; text-align:right;"> (c) Daniel Richard </h3>
 
 
   <div style="background-color:#000000; align-content:center;"">
@@ -65,7 +95,6 @@
   
   </div>
 </footer>
-
 
 
 
