--- a/map.html
+++ b/map.html
@@ -59,7 +59,7 @@
             '<h1 id="firstHeading" style="color:black" class="firstHeading">The Onion</h1>'+
             '<div id="bodyContent">'+
 
-            '<p>The Onion is an excelent tap house with great food ' +
+            '<p style = "color:black">The Onion is an excelent tap house with great food ' +
             'with 51 beers on tap and the best desert Ive had (The Messy Face) '+
             'You need to go to the Onion </p> '+
             '</div>'+
@@ -76,7 +76,7 @@
             '<h1 id="firstHeading" style="color:black" class="firstHeading">De Leon Foods</h1>'+
             '<div id="bodyContent">'+
             
-            '<p>Great mexican food with homemade tortillas ' +
+            '<p style = "color:black">Great mexican food with homemade tortillas ' +
  
              '</p> '+
             '</div>'+
@@ -92,7 +92,7 @@
             '<h1 id="firstHeading" class="firstHeading" style="color:black">The Flying Goat</h1>'+
             '<div id="bodyContent">'+
             
-            '<p>Pizza that is good' +
+            '<p style = "color:black">Pizza that is good' +
  
              '</p> '+
             '</div>'+
@@ -161,12 +161,12 @@
   </body>
 
   <footer>
- <div class="flex-container3">
+    <br>
+    <br>
+ <div class="flex-container3" style= "text-align:right">
   
-  <a style= "background-color: #000000;" href="index.html"> home </a>
-  <a style= "background-color: #000000;" href="map.html"> map </a>
-  <a style= "background-color: #000000;" href="form.html"> form </a>
-  <a style= "background-color: #000000;" href="api.html"> api </a>
+
+  <h3 style = "color:white; text-align:right;"> (c) Daniel Richard </h3>
 
 
   <div style="background-color:#000000; align-content:center;"">
