--- a/form.html
+++ b/form.html
@@ -101,29 +101,33 @@
 
 
 
-
+<div style = "color:white">
 
 <h2 id="newtext" style="text-align: center">
 
 </h2>
+<br>
 
-<h3 id ="snumber" >
+<h3 style = "color:white" id ="snumber" >
 	</h3>
-<h3 id = "semail" >
+  <br>
+<h3 style = "color:white" id = "semail" >
 </h3>
-
+<br>
+<br>
+<br>
 <p id = "content">
 
 </p>
-
+</div>
 </body>
   <footer>
- <div class="flex-container3">
+    <br>
+    <br>
+ <div class="flex-container3" style= "text-align:right">
   
-  <a style= "background-color: #000000;" href="index.html"> home </a>
-  <a style= "background-color: #000000;" href="map.html"> map </a>
-  <a style= "background-color: #000000;" href="form.html"> form </a>
-  <a style= "background-color: #000000;" href="api.html"> api </a>
+
+  <h3 style = "color:white; text-align:right;"> (c) Daniel Richard </h3>
 
 
   <div style="background-color:#000000; align-content:center;"">
