--- a/api.html
+++ b/api.html
@@ -41,8 +41,8 @@
 <div style ="background-color : lightblue;">
 
   <br>
-<h1>
-  Here is some API data
+<h1 style = "font-size: xx-large;">
+  Here is a random recipe
 </h1>
 <br>
 
