--- a/index.html
+++ b/index.html
@@ -29,13 +29,14 @@
   
   </div>
 </div>
-<div style = "background: green">
-<br >
-
-<h1>
+<div style ="background-color : green" >
+  <br>
+<h1 style = "font-size: xx-large;">
   Things to do in Spokane
 </h1>
 <br>
+
+
 </div>
 
 </div>
