--- a/map.html
+++ b/map.html
@@ -35,12 +35,15 @@
 
 
 
-<h1 style = "color: black; background-color: gold;">
-    <br>
-  Heres a map of some restaraunts
+<div style ="background-color : gold" >
   <br>
-  <br>
+<h1 style = "font-size: xx-large;">
+  Here is a map of good food in Spokane
 </h1>
+<br>
+
+
+</div>
 
 
   <body>
