--- a/form.html
+++ b/form.html
@@ -56,20 +56,20 @@
 
 <form >
   First name:<br>
-  <input class="inputx" id = "firstname" name="firstname" placeholder="Enter First Name" >
+  <input style = "width: 75%" id = "firstname" name="firstname" placeholder="Enter First Name" >
   <br>
   
   Last name:<br>
-  <input  class="inputx" id = "lastname" name="lastname" placeholder="Enter Last Name" >
+  <input    style = "width: 75%" id = "lastname" name="lastname" placeholder="Enter Last Name" >
   <br>
 
-   <br>
+
   
   Number:<br>
-  <input class="inputx" type="number" id = "number" name="number" placeholder="Enter Phone Number"  >
+  <input  class = "no-spin" style = "width: 75%" type="number" id = "number" name="number" placeholder="Enter Phone Number"  >
   <br>
    EMAIL:<br>
-  <input  class="inputx" type="email" id = "email" name="email" placeholder="Enter Email" >
+  <input    style = "width:75%" type="email" id = "email" name="email" placeholder="Enter Email" >
   <br>
   
 
@@ -77,7 +77,7 @@
   <br>
    Message:<br>
 
-  <textarea id = "message" rows="4" cols="50" placeholder="Tell me about yourself">
+  <textarea id = "message" rows="4" cols="25" placeholder="Tell me about yourself">
   </textarea>
   <br>
   <br>
