--- a/api.html
+++ b/api.html
@@ -1,6 +1,3 @@
-<!--couldnt figure out why the icon/text/view more part of the page is spaced apart so much-->
-
-
 <!DOCTYPE html>
 
 
@@ -31,14 +28,12 @@
 
   <div style="background-color:#000000; align-content:center;"">
 
-
   </div>
-  
   </div>
 
 
 
-<div style ="background-color : lightblue;">
+<div style ="background-color : #0099cc;">
 
   <br>
 <h1 style = "font-size: xx-large;">
@@ -60,12 +55,6 @@
 <br>
 <p style = "padding:20px" id = "instructions"></p>
 
-
-
-
-
-
-
 <div style= "text-align:center">
   <br>
 <input  type="submit" id = "food" value="New Recipe" onClick = "button()" >
@@ -74,10 +63,6 @@
 
 
 </body>
-
-
-
-
 
    <footer>
     <br>
@@ -95,8 +80,6 @@
   
   </div>
 </footer>
-
-
 
 
 
