--- a/api.html
+++ b/api.html
@@ -53,7 +53,7 @@
   height:auto; display: block;" src = "" id = image>
 <br>
 <br>
-<p style = "padding:20px" id = "instructions"></p>
+<p style = "padding:30px" id = "instructions"></p>
 
 <div style= "text-align:center">
   <br>
@@ -81,6 +81,6 @@
   </div>
 </footer>
 
-
-
+</div>
 </html>
+
