--- a/map.html
+++ b/map.html
@@ -63,8 +63,7 @@
             '<div id="bodyContent">'+
 
             '<p style = "color:black">The Onion is an excelent tap house with great food ' +
-            'with 51 beers on tap and the best desert Ive had (The Messy Face) '+
-            'You need to go to the Onion </p> '+
+            'with 51 beers on tap </p> '+
             '</div>'+
             '</div>';
 
