--- a/form.html
+++ b/form.html
@@ -92,12 +92,18 @@
 
 
 </div>
+
+<div>
+<p id="error" style = "color:white">  </p>
+</div>
 <div style="text-align: center">
 
 <br>
 <br>
 <input type="submit" id = "button" value="Submit" onClick = "submit()" >
 </div>
+<br>
+<br>
 
 
 
