--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="food.js"></script>
     <script>
 </script>
-    </style>
+
   </head>
 <body>
 <div style ="background-color : green;">
@@ -22,13 +22,14 @@
   <a style= "background-color: #000000;" href="form.html"> form </a>
   <a style= "background-color: #000000;" href="api.html"> api </a>
 
-  <div style="background-color:#000000; align-content:center;"">
+  <div style="background-color:#000000; align-content:center;">
 
 
   </div>
   
   </div>
 </div>
+
 <div style ="background-color : green" >
   <br>
 <h1 style = "font-size: xx-large;">
@@ -52,7 +53,8 @@
 <input type="submit" id = "Food" value="Food" onClick = "food()" >
 </div>
 
-<div>
+<div style="text-align:center">
+
  <ul id = "sportslist" style = "display: none; ">
  	<li>
 		<a href="http://gozags.com" style = "width : auto; text-align: center;">
@@ -106,6 +108,7 @@
 </div>
 
 </body>
+
   <footer>
   	<br>
   	<br>
@@ -115,7 +118,7 @@
   <h3 style = "color:white; text-align:right;"> (c) Daniel Richard </h3>
 
 
-  <div style="background-color:#000000; align-content:center;"">
+  <div style="background-color:#000000; align-content:center;">
 
 
   </div>
